# archer

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  DEFAULT_CONFIG.toml  README.md  default_config.yaml  deleteme.txt
archer/: Cargo.toml
archer/src/: main.rs
examples/: custom_component.rs  demo.rs
polybar/: Cargo.toml
polybar/src/: event.rs  poly_bar.rs  util.rs
polybar/src/components/: clock.rs  date.rs
src/: app_bar.rs  autostart.rs  common.rs  config.rs  display.rs  event.rs  grid.rs  hot_key_manager.rs  hotkey.rs  lib.rs  logging.rs  main.rs  poly_bar.rs  startup.rs  task_bar.rs  tile.rs  tile_grid.rs  tray.rs  update.rs  util.rs  win_event_handler.rs  window.rs  workspace.rs  wtm.rs
src/components/: clock.rs  date.rs  mod.rs
src/config/: hot_reloading.rs  macros.rs
src/event_handler/: keybinding.rs  winevent.rs
src/event_handler/keybinding/: close_tile.rs  focus.rs  split.rs  swap.rs  toggle_floating_mode.rs  toggle_work_mode.rs
src/event_handler/winevent/: destroy.rs  focus_change.rs  show.rs
src/grid/: config.rs  tile.rs
src/hot_key_manager/: key.rs  modifier.rs
src/poly_bar/: system.rs
src/tiles/: mod.rs  tile.rs  tile_grid.rs
src/util/: error.rs  mod.rs  rect.rs
src/window/: grid.rs  gwl_ex_style.rs  gwl_style.rs  preview.rs
tests/: acceptance.rs
winsapi/: Cargo.toml
winsapi/examples/: keybind.rs
winsapi/src/: device_context.rs  error_handler.rs  event.rs  font.rs  internal.rs  keyboard.rs  lib.rs  macros.rs  monitor.rs  rect.rs  window.rs
wtm/: Cargo.toml
wtm/src/: config.rs  event.rs  grid.rs  hotkey.rs  lib.rs  main-old.rs  util.rs  window.rs
wtm/src/grid/: config.rs  tile.rs
wtm/src/window/: grid.rs  mod.rs  preview.rs
