[package]
name = "appbar"
version = "0.2.0"
authors = ["bretzle <johnfish218@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
crossbeam-channel = "0.4"
thiserror = "1.0"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "impl-default", "windowsx", "libloaderapi"]

[dev-dependencies.simple_logger]
version = "1.6.0"
default-features = false
features = ["colored"]