[package]
name = "wtm"
version = "0.1.0"
authors = ["bretzle <johnfish218@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
crossbeam-channel = "0.4"
once_cell = "1.4.0"
winsapi = { path = "../winsapi" }

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "shellapi", "winreg"]

