[package]
name = "archer"
version = "0.1.0"
authors = ["John Bretz <johnfish218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polybar = { path = "../polybar" }
wtm = { path = "../wtm" }

[dependencies.simple_logger]
version = "1.6.0"
default-features = false
features = ["colored"]