[package]
name = "winsapi"
version = "0.1.0"
authors = ["bretzle <johnfish218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "impl-default", "windowsx", "libloaderapi"]

[dev-dependencies]
once_cell = "1.4.0"