[package]
name = "wtm"
version = "0.1.0"
authors = ["bretzle <johnfish218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crossbeam-channel = "0.4"
toml = "0.5.6"
dirs = "3.0.1"
lazy_static = "1.4.0"
regex = "1.3"
ron = "0.6.0"
serde = { version = "1.0.114", features = ['derive'] }

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "shellapi", "winreg"]
